src/date-picker/_date-picker.scss
$datepicker-padding: 10px;
$datepicker-cell-size: 27px;
$monthpicker-cell-size: 60px;
$datepicker-text-color-disabled: #e6e6e6;

.akam-date-picker {
  position: relative;

  input {
    padding-right: #{$input-border-radius * 2};
    -webkit-appearance: textfield;
    outline: 0;

    & ~ .button,
    & ~ .btn {
      min-width: 0;
      margin-left: -#{$input-border-radius * 2};
      @include border-left-radius(0);
      i {
        @include disable-magic-sprite-selectors(calendar);
      }

    }

    &:disabled ~ .button,
    &:disabled ~ .btn {
      background: $button-background-color-disabled;
      border-color: $button-border-color-disabled;
      color: $button-text-color-disabled;
      cursor: default;

      i {
        opacity: $input-button-icon-opacity-disabled;
      }
    }

    &.ng-invalid.ng-touched ~ .button,
    &.ng-invalid.ng-touched ~ .btn {
      border-left-color: $border-color-invalid;
    }

    // Reset date picker focus state to look like its default state
    &:focus {
      border-color: $input-border-color;
      background-color: $input-background-color;
      @include box-shadow($input-box-shadow);
    }

    &:disabled {
      @include placeholder-enhanced($datepicker-text-color-disabled, italic);
      color: $datepicker-text-color-disabled;
      cursor: default;
    }
  }

  .clear-date {
    margin-left: -30px;
    margin-top: 6px;
    position: absolute;
    opacity: .28;

    &:hover {
      opacity: .64;
    }
  }

  &.opened {
    input {
      border: 1px solid $input-border-color-focus;
      background-color: white;
      @include box-shadow(none);
    }

    input ~ .button,
    input ~ .btn {
      border-color: #999999;
      border-left-color: $input-border-color-focus;
      @include background-image(linear-gradient($button-gradient-bottom-hover, $button-gradient-top-hover));
    }
    .clear-date {
      opacity: .333;
    }
  }

  // Date Picker Popup is done via drop down menu item
  ul.dropdown-menu {
    padding: $datepicker-padding;
    outline: none;
    border: 1px solid #ccc;
    border-radius: $border-radius;
    margin-top: 0;
    top: 100%;
    min-width: (($datepicker-cell-size + 1) * 7) + ($datepicker-padding * 2) + 2;
    @include box-shadow($global-box-shadow);

    // Override TWBS
    .btn,
    .button {
      min-width: 0;
      height: auto;
      line-height: 1;
      background: 0 none;
    }

    > li * {
      outline: none; // stop outlines for any of the popup
    }

    table {
      border-color: #c8c8c8;
      border-spacing: 0px;
      border-collapse: collapse;
    }

    table thead tr + tr th {
      padding-bottom: 5px;
    }

    table tbody tr td {
      border: 1px solid #ccc;
    }

    table tbody td button {
      border: 0;
      span {
        display: inline-block;
        color: #666666;

        &.text-muted {
          display: none;
        }

        // TODAYs DATE
        &.text-info {
          background: #ededed;
          color: #666666;
        }
      }

      &:disabled {
        span {
          background: #fff;
          color: $datepicker-text-color-disabled;
        }
      }

      // Keyboard selected date
      &.active {
        background-color: #ffffff;
        @include box-shadow(none);
      }

      // Selected date
      &.btn-info {
        span, span:hover {
          background-color: #0099CC;
          color: #ffffff;
        }

        span.text-muted {
          background-color: #0099CC;
        }
      }

      // Date being hovered over
      &:hover {
        span {
          color: #666666;
          background-color: #CEE7FF;
        }
      }
    }

    thead th button[role="heading"] {
      &,
      &:hover,
      &:active,
      &:focus {
        border: none;
        outline: 0;
        background: #FFFFFF;
        box-shadow: none;
      }

      strong {
        font-size: 14px;
        color: #666666;
        font-weight: normal;
      }
    }

    thead tr:first-child th {
      padding-bottom: 15px;
    }

    thead tr th button:not([role="heading"]) {
      padding: 5px;
      color: #666666;

      background: $button-background-color;
      border: solid $button-border-width $button-border-color;
      border-radius: $button-border-radius;
      @include background-image(linear-gradient($button-gradient-top, $button-gradient-bottom));

      &:hover {
        color: $button-text-color;
        border-color: $button-border-color-hover;
        text-decoration: none;
        @include background-image(linear-gradient($button-gradient-top-hover, $button-gradient-bottom-hover));
      }

      &:active, &:visited {
        color: $button-text-color;
        border-color: $button-border-color-hover;
        @include background-image(linear-gradient($button-gradient-bottom-hover, $button-gradient-top-hover));
      }

      &:disabled,
      &.disabled {
        background: $button-background-color-disabled;
        border-color: $button-border-color-disabled;
        color: $button-text-color-disabled;
      }
    }

    thead th small {
      font-weight: bold;
      font-size: 11px;
      color: #666666;
      text-align: center;
    }

    tbody td {
      padding: 0;
      height: 22px;

      button {
        padding: 0;
        border-radius: 0;

        span {
          display: inline-block;
          width: $datepicker-cell-size;
          font-size: 12px;
          line-height: 22px;
        }

        &[disabled] {
          background-color: #e6e6e6;
          color: #c8c8c8;
        }
      }
    }
  }

  &.month {
    ul.dropdown-menu {
      min-width: (($monthpicker-cell-size + 1) * 3) + ($datepicker-padding * 2) + 2;

      tbody td {
        height: 30px;
        button span {
          width: $monthpicker-cell-size;
          height: 30px;
          font-size: 14px;
          line-height: 2.14;
        }
      }
    }
  }
}

